--- a/packages/core/src/styles/scss/utilities/_states.scss
+++ b/packages/core/src/styles/scss/utilities/_states.scss
@@ -1,15 +1,16 @@
 // Destacado
 .highlight {
-  background: v(status-highlight-background)
-    linear-gradient(v(status-highlight-overlay), v(status-highlight-overlay));
+  background: v(status-highlight-background) linear-gradient(v(status-highlight-overlay), v(status-highlight-overlay));
   color: v(status-highlight-text);
   padding: 0 v(spacing-scale-half);
 }
+
 // Desativado
 [disabled],
 .disabled {
   @include disabled;
 }
+
 // Arrastado
 .dragged {
   background: v(status-dragged-background);
