--- a/packages/core/src/styles/scss/mixins/_input.scss
+++ b/packages/core/src/styles/scss/mixins/_input.scss
@@ -11,8 +11,7 @@
   // font-size
   // font-weight
   background: var(--input-background);
-  border: var(--input-border-width) var(--input-border-style)
-    var(--input-border-color);
+  border: var(--input-border-width) var(--input-border-style) var(--input-border-color);
   border-radius: var(--input-radius);
   color: var(--text-color);
   display: block;
@@ -47,6 +46,7 @@
       input {
         border: 2px solid var(--color-#{$color});
       }
+
       .feedback.color-#{$color} {
         align-items: center;
         background: $color;
@@ -56,6 +56,7 @@
         margin-bottom: var(--spacing-scale-base);
         padding: 5px;
       }
+
       @if ($color == warning) {
         .feedback.color-warning {
           color: var(--color-secondary-08) !important;
