--- a/packages/core/src/styles/scss/utilities/_typography.scss
+++ b/packages/core/src/styles/scss/utilities/_typography.scss
@@ -33,6 +33,7 @@ p {
     text-decoration: underline;
   }
 }
+
 @include media-breakpoint-up(sm) {
   p {
     font-size: var(--font-size-scale-up-01);
@@ -77,6 +78,7 @@ h1,
   margin-bottom: var(--spacing-scale-2xh);
   margin-top: 0;
 }
+
 @include media-breakpoint-up(sm) {
   .h1,
   h1 {
@@ -96,6 +98,7 @@ h2,
   margin-top: var(--spacing-scale-3xh);
   padding-bottom: var(--spacing-scale-2xh);
 }
+
 @include media-breakpoint-up(sm) {
   .h2,
   h2 {
@@ -113,6 +116,7 @@ h3,
   margin-bottom: var(--spacing-scale-2xh);
   margin-top: var(--spacing-scale-3xh);
 }
+
 @include media-breakpoint-up(sm) {
   .h3,
   h3 {
@@ -130,6 +134,7 @@ h4,
   margin-bottom: var(--spacing-scale-2xh);
   margin-top: var(--spacing-scale-2x);
 }
+
 @include media-breakpoint-up(sm) {
   .h4,
   h4 {
@@ -150,6 +155,7 @@ h5,
   padding-bottom: var(--spacing-scale-base);
   text-transform: uppercase;
 }
+
 @include media-breakpoint-up(sm) {
   .h5,
   h5 {
@@ -170,6 +176,7 @@ h6,
   padding-bottom: var(--spacing-scale-base);
   text-transform: uppercase;
 }
+
 @include media-breakpoint-up(sm) {
   .h6,
   h6 {
@@ -253,8 +260,8 @@ tr {
   &:hover {
     td {
       background-image: linear-gradient(
-        rgba(var(--color-rgb), var(--hover)),
-        rgba(var(--color-rgb), var(--hover))
+          rgba(var(--color-rgb), var(--hover)),
+          rgba(var(--color-rgb), var(--hover))
       );
     }
   }
@@ -263,8 +270,7 @@ tr {
 tbody {
   th,
   td {
-    border-bottom: var(--table-border-width) var(--table-border-style)
-      var(--table-border-color);
+    border-bottom: var(--table-border-width) var(--table-border-style) var(--table-border-color);
   }
 }
 
