--- a/packages/core/src/components/brx-button/_mixins.scss
+++ b/packages/core/src/components/brx-button/_mixins.scss
@@ -153,7 +153,7 @@
     }
   }
 
-  &:not(:is(:disabled, [disabled])) {
+  &:not(:disabled):not([disabled]) {
     .brx-button-native {
       --focus-offset: var(--spacing-scale-half);
       @include focus;
