feat(core): components: brx-step (#52)
Closes #52

--- a/packages/core/src/components/brx-icon/brx-icon.scss
+++ b/packages/core/src/components/brx-icon/brx-icon.scss
@@ -1,4 +1,12 @@
 brx-icon {
+  &,
+  i {
+    display: inline-flex;
+
+    align-items: center;
+    justify-content: center;
+  }
+
   i {
     color: inherit;
   }
