feat(core): components: brx-upload (#58)
Closes #58

--- a/packages/core/src/components/brx-tabs/_mixins.scss
+++ b/packages/core/src/components/brx-tabs/_mixins.scss
@@ -38,12 +38,13 @@
   }
 
   brx-tab {
-    .brx-tab-container {
+    .brx-tooltip-auto-container {
       align-items: center;
       display: flex;
       justify-content: center;
-      position: relative;
       white-space: nowrap;
+
+      position: relative;
 
       &:first-child {
         padding-left: 0;
