feat(core): brx-select: keyboard events and focus (#51) [WIP]

--- a/packages/core/src/components/brx-select/_mixins.scss
+++ b/packages/core/src/components/brx-select/_mixins.scss
@@ -48,109 +48,111 @@
         background: var(--color-secondary-07);
       }
     }
+
+    brx-select-option {
+      &:not(:last-child) {
+        brx-item {
+          border-bottom: var(--select-divider);
+        }
+      }
+
+      brx-item {
+        @include light-mode;
+        --item-padding-y: var(--spacing-scale-2x);
+
+        .content {
+          padding: 0;
+        }
+
+        brx-checkbox,
+        brx-radio {
+          --item-padding-x: var(--spacing-scale-2x);
+          --item-padding-y: var(--spacing-scale-2x);
+
+          input {
+            &:hover:not(:disabled) {
+              + label::before {
+                background-image: none;
+              }
+            }
+
+            + label {
+              padding-left: calc(var(--checkbox-padding) + var(--checkbox-size) + var(--item-padding-x));
+            }
+          }
+        }
+
+        brx-radio {
+          input,
+          input:checked {
+            + label {
+              color: var(--text-color);
+              display: block;
+              height: auto;
+              min-height: 0;
+              padding: var(--item-padding);
+
+              &::before,
+              &::after {
+                display: none;
+                content: none;
+              }
+            }
+          }
+        }
+
+        &:not([disabled]) {
+          --focus-offset: calc(var(--spacing-scale-half) * -1);
+          @include focus;
+          @include hover('color');
+        }
+
+        &[selected] {
+          @include dark-mode;
+          @include focus;
+          @include hover('color');
+        }
+
+        &[disabled] {
+          line-height: calc(var(--font-line-height-high) * 2);
+          padding-left: calc(var(--item-padding) + var(--spacing-scale-base));
+        }
+      }
+    }
   }
 
   &[expanded] .brx-select-options,
   .brx-select-options[data-select-expanded] {
     display: block;
   }
-
-  brx-item:not([pass-styles]) {
-    @include light-mode;
-    --item-padding-y: var(--spacing-scale-2x);
-
-    .content {
-      padding: 0;
-    }
-
-    brx-checkbox,
-    brx-radio {
-      --item-padding-x: var(--spacing-scale-2x);
-      --item-padding-y: var(--spacing-scale-2x);
-
-      input {
-        &:hover:not(:disabled) {
-          + label::before {
-            background-image: none;
-          }
-        }
-
-        + label {
-          padding-left: calc(var(--checkbox-padding) + var(--checkbox-size) + var(--item-padding-x));
-        }
-      }
-    }
-
-    brx-radio {
-      input,
-      input:checked {
-        + label {
-          color: var(--text-color);
-          display: block;
-          height: auto;
-          min-height: 0;
-          padding: var(--item-padding);
-
-          &::before,
-          &::after {
-            display: none;
-            content: none;
-          }
-        }
-      }
-    }
-
-    &:not(:last-child) {
-      border-bottom: var(--select-divider);
-    }
-
-    &:not([disabled]) {
-      --focus-offset: calc(var(--spacing-scale-half) * -1);
-      @include focus;
-      @include hover('color');
-    }
-
-    &.selected,
-    &[selected] {
-      @include dark-mode;
-      @include focus;
-      @include hover('color');
-    }
-
-    &.disabled,
-    &[disabled] {
-      line-height: calc(var(--font-line-height-high) * 2);
-      padding-left: calc(var(--item-padding) + var(--spacing-scale-base));
-    }
-  }
 }
 
 @mixin select-multiple {
-  brx-item:not([pass-styles]) {
-    &.highlighted,
+  brx-select-option {
     &[highlighted] {
-      background-color: var(--gray-2);
-      padding-bottom: var(--spacing-scale-base);
-      padding-top: var(--spacing-scale-base);
-      // background: rgba(v(rgb-support-03), 0.16);
-      brx-checkbox,
-      brx-radio {
-        label {
-          font-weight: var(--font-weight-semi-bold);
-        }
-
-        &:hover {
-          background: linear-gradient(rgba(var(--interactive-rgb), var(--hover)), rgba(var(--interactive-rgb), var(--hover)));
-
+      brx-item {
+        background-color: var(--gray-2);
+        padding-bottom: var(--spacing-scale-base);
+        padding-top: var(--spacing-scale-base);
+        // background: rgba(v(rgb-support-03), 0.16);
+        brx-checkbox,
+        brx-radio {
           label {
-            color: var(--text-color);
+            font-weight: var(--font-weight-semi-bold);
+          }
+
+          &:hover {
+            background: linear-gradient(rgba(var(--interactive-rgb), var(--hover)), rgba(var(--interactive-rgb), var(--hover)));
+
+            label {
+              color: var(--text-color);
+            }
           }
         }
-      }
 
-      &.selected,
-      &[selected] {
-        background-color: var(--selected);
+        &[selected] {
+          background-color: var(--selected);
+        }
       }
     }
   }
