feat(core): components: brx-pagination (#50) [WIP]

--- a/packages/core/src/styles/scss/mixins/_hover.scss
+++ b/packages/core/src/styles/scss/mixins/_hover.scss
@@ -4,13 +4,12 @@
 ///  a {
 ///    @include hover;
 ///  }
-@mixin hover($color: "interactive") {
-  &:not(:disabled) {
-    &:hover {
-      background-image: linear-gradient(
-          rgba(var(--#{$color}-rgb), var(--hover)),
-          rgba(var(--#{$color}-rgb), var(--hover))
-      );
+@mixin hover($color: 'interactive') {
+  &:not([data-disable-hover-interaction]) {
+    &:not(:disabled) {
+      &:hover {
+        background-image: linear-gradient(rgba(var(--#{$color}-rgb), var(--hover)), rgba(var(--#{$color}-rgb), var(--hover)));
+      }
     }
   }
 }
