feat(core): brx-datetimepicker: allow value of type Date, string and number; implement brxChange

--- a/packages/core/src/html/components/datetimepicker.html
+++ b/packages/core/src/html/components/datetimepicker.html
@@ -72,6 +72,16 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <h2>Controlled</h2>
+
+        <div>
+          <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+            <brx-datetimepicker controlled-value="10/05/2023" type="date" mode="single" placeholder="dd/mm/aaaa" label="Label"></brx-datetimepicker>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
