--- a/packages/core/src/html/components/input.html
+++ b/packages/core/src/html/components/input.html
@@ -189,6 +189,16 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <h2>Controlled</h2>
+
+        <div>
+          <div class="col-sm-8 col-lg-5">
+            <brx-input label="Label / Rótulo" placeholder="Placeholder" controlled-value="Controlled."> </brx-input>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
