feat(core): brx-textarea: controlled-value (#76)

--- a/packages/core/src/html/components/textarea.html
+++ b/packages/core/src/html/components/textarea.html
@@ -120,6 +120,11 @@
           <brx-textarea label="Label" placeholder="Exemplo de textarea com contador e sem limite de caracteres" counter="total"></brx-textarea>
         </div>
       </div>
+
+      <div>
+        <h2>Controlled</h2>
+        <brx-textarea controlled-value="Controlled." label="Label"></brx-textarea>
+      </div>
     </section>
   </body>
 </html>
