--- a/packages/core/src/html/components/radio.html
+++ b/packages/core/src/html/components/radio.html
@@ -36,12 +36,25 @@
       <brx-divider></brx-divider>
 
       <div class="py-3">
-        <h2>Largado</h2>
+        <h2>Simples</h2>
 
-        <brx-radio label="Oi" name="rex1" value="a"></brx-radio>
-        <brx-radio disabled label="Oi" name="rex1" value="b"></brx-radio>
-        <brx-radio invalid label="Oi" name="rex1" value="c"></brx-radio>
-        <brx-radio label="Oi" name="rex1" valid value="d"></brx-radio>
+        <brx-radio value="a" name="exemplo-radio-simples" label="A"></brx-radio>
+        <brx-radio value="b" name="exemplo-radio-simples" label="B" disabled></brx-radio>
+        <brx-radio value="c" name="exemplo-radio-simples" label="C" invalid></brx-radio>
+        <brx-radio value="d" name="exemplo-radio-simples" label="D" valid></brx-radio>
+      </div>
+
+      <brx-divider></brx-divider>
+
+      <div class="py-3">
+        <h2>Controlado</h2>
+
+        <p>Não recomendado. Prefira o brx-radio-group.</p>
+
+        <brx-radio value="a" name="exemplo-radio-controlado" label="A" controlled-checked></brx-radio>
+        <brx-radio value="b" name="exemplo-radio-controlado" label="B" disabled></brx-radio>
+        <brx-radio value="c" name="exemplo-radio-controlado" label="C" invalid></brx-radio>
+        <brx-radio value="d" name="exemplo-radio-controlado" label="D" valid></brx-radio>
       </div>
 
       <brx-divider></brx-divider>
@@ -50,11 +63,38 @@
         <h2>Radio Group</h2>
 
         <brx-radio-group value="c">
-          <brx-radio label="Oi" name="rex2" value="a"></brx-radio>
-          <brx-radio disabled label="Oi" name="rex2" value="b"></brx-radio>
-          <brx-radio invalid label="Oi" name="rex2" value="c"></brx-radio>
-          <brx-radio label="Oi" name="rex2" valid value="d"></brx-radio>
+          <brx-radio value="a" name="exemplo-radio-group-simples" label="Oi"></brx-radio>
+          <brx-radio value="b" name="exemplo-radio-group-simples" label="Oi" disabled></brx-radio>
+          <brx-radio value="c" name="exemplo-radio-group-simples" label="Oi" invalid></brx-radio>
+          <brx-radio value="d" name="exemplo-radio-group-simples" label="Oi" valid></brx-radio>
         </brx-radio-group>
+      </div>
+
+      <div class="py-3">
+        <h2>Controlled Radio Group</h2>
+
+        <p>Não será possível selecionar novamente a opção C.</p>
+
+        <brx-radio-group id="controlled" controlled-value="c">
+          <brx-radio value="a" label="A" name="exemplo-radio-group-controlado"></brx-radio>
+          <brx-radio value="b" label="B" name="exemplo-radio-group-controlado" disabled></brx-radio>
+          <brx-radio value="c" label="C" name="exemplo-radio-group-controlado" invalid></brx-radio>
+          <brx-radio value="d" label="D" name="exemplo-radio-group-controlado" valid></brx-radio>
+        </brx-radio-group>
+
+        <script>
+          {
+            const radioGroup = document.querySelector('#controlled');
+
+            radioGroup.addEventListener('brxRadioGroupChange', e => {
+              const { value } = e.detail;
+
+              if (value !== 'c') {
+                radioGroup.controlledValue = value;
+              }
+            });
+          }
+        </script>
       </div>
     </section>
   </body>
