--- a/packages/core/src/components/brx-breadcrumb/_mixins.scss
+++ b/packages/core/src/components/brx-breadcrumb/_mixins.scss
@@ -6,7 +6,7 @@
 }
 
 @mixin breadcrumb-default {
-  display: inline-grid;
+  display: block;
   font-size: var(--font-size-scale-down-01);
   font-weight: var(--font-weight-medium);
   position: relative;
@@ -75,7 +75,7 @@
 }
 
 @mixin breadcrumb-list {
-  brx-breadcrumb-list {
+  .brx-breadcrumb-list {
     align-items: center;
     border: 0;
     display: flex;
